# neutron-standards-database

./: .gitmodules  README.md  dvc.yaml  params.yaml  pyproject.toml
codes/: cf252_dat2022.txt  covmat_preparation.py  create_analysis_plots.py  create_data_with_sacs_variations.py  create_derived_database.py  plot_utils.py  produce_result.py  produce_std2017_result.py  pyproject.toml  save_result.py
codes/database_modifications/: add_mannhart_sacs.py  change_pu9_absratio_to_shape.py  change_u5_absratio_to_shape.py  leave_as_is.py  remove_abs_pu9_xs.py  remove_abs_pu9_xs_above_13MeV.py  remove_sacs_data.py  use_irdff_cf252_spectrum.py  use_irdff_cf252_spectrum_large_unc.py  use_irdff_cf252_spectrum_without_unc.py
codes/database_modifications/auxiliary_data/: IRDFF-II_Cf252_spectrum.endf
database/: .gitignore  README.md
eval2017/: result_MT-1-R1-1.csv  result_MT-1-R1-10.csv  result_MT-1-R1-11.csv  result_MT-1-R1-12.csv  result_MT-1-R1-13.csv  result_MT-1-R1-14.csv  result_MT-1-R1-15.csv  result_MT-1-R1-16.csv  result_MT-1-R1-17.csv  result_MT-1-R1-18.csv  result_MT-1-R1-19.csv  result_MT-1-R1-2.csv  result_MT-1-R1-20.csv  result_MT-1-R1-21.csv  result_MT-1-R1-22.csv  result_MT-1-R1-23.csv  result_MT-1-R1-24.csv  result_MT-1-R1-25.csv  result_MT-1-R1-26.csv  result_MT-1-R1-27.csv  result_MT-1-R1-28.csv  result_MT-1-R1-29.csv  result_MT-1-R1-3.csv  result_MT-1-R1-30.csv  result_MT-1-R1-31.csv  result_MT-1-R1-32.csv  result_MT-1-R1-33.csv  result_MT-1-R1-4.csv  result_MT-1-R1-5.csv  result_MT-1-R1-6.csv  result_MT-1-R1-7.csv  result_MT-1-R1-8.csv  result_MT-1-R1-9.csv  (+3 more)
(+43 files in other folders)
