[tool.poetry]
name = "neutron-standards-database"
version = "0.1"
description = "datafiles and python pipeline to produce evaluations with gmapy"
authors = ["Georg Schnabel"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.8, <3.10"
numpy = ">=1.23.3"
pandas = ">=1.4.4"
scipy = "^1.9.1"
fortranformat = "^1.2.2"
scikit-sparse = "^0.4.6"
dvc = "^2.27.2"
matplotlib = "^3.6.0"
seaborn = "^0.12.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
