[tool.poetry]
name = "standard-evaluation-scripts"
version = "0.1.0"
description = "just some neutron standard analysis scripts"
authors = ["None"]
license = "MIT"
readme = "README.md"
packages = [{include = "standard_evaluation_scripts"}]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.5.0"
numpy = "^1.23.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
